[gd_scene load_steps=14 format=2]

[ext_resource path="res://Items/Boiler/Boiler.gd" type="Script" id=1]
[ext_resource path="res://assets/boiler_01.png" type="Texture" id=2]
[ext_resource path="res://assets/boiler_02.png" type="Texture" id=3]
[ext_resource path="res://assets/coin.png" type="Texture" id=4]
[ext_resource path="res://assets/sfx/Bonus.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/CoinShow.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/ARCADECLASSIC.TTF" type="DynamicFontData" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.21812, 51.3237 )

[sub_resource type="Animation" id=3]
resource_name = "bonus"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ControlBonus/LabelBonus:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 55, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 1.75
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("CoinSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.87, 1.75 ),
"transitions": PoolRealArray( 0.63728, 2, 0.000345267 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -200 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CoinSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0, -90.0, -180.0, -225.0, -270.0, -315.0, -360.0 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 2.06851

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 7 )

[node name="Boiler" type="Area2D" groups=[
"obstacle",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -10.2073, 0.317158, 12.5387, -12.1654, 12.6137, 27.8558, -10.1677, 28.3565 )

[node name="AreaNotifier" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaNotifier"]
position = Vector2( -0.0915155, -103.933 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bonus = SubResource( 3 )
anims/coin = SubResource( 4 )

[node name="CoinSprite" type="Sprite" parent="."]
position = Vector2( 0, -195.635 )
rotation = -3.92699
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CoinArea2D" type="Area2D" parent="CoinSprite"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoinSprite/CoinArea2D"]
shape = SubResource( 5 )

[node name="CoinPickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="CoinShowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ControlBonus" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LabelBonus" type="Label" parent="ControlBonus"]
margin_left = 55.0
margin_right = 99.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "5000"
[connection signal="body_entered" from="." to="." method="_on_Boiler_body_entered"]
[connection signal="body_entered" from="AreaNotifier" to="." method="_on_AreaNotifier_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="CoinSprite/CoinArea2D" to="." method="_on_CoinArea2D_body_entered"]
